--- a/vignettes/manual/index.Rmd
+++ b/vignettes/manual/index.Rmd
@@ -26,6 +26,7 @@ Building and running Hector
 
 Programming topics
 --------------------
+* [Contribution guide](ContributionsGuide.html)
 * Learn how to create a new [component](AddNewComponent.html) or [variable](AddNewVariable.html) in Hector.
 * Hector internals: [unitvals](Unitvals.html), [time series](TimeSeries.html), data passing, the [component API](ComponentAPI.html) .
 * The Hector [style guide](StyleGuide.html).
