--- a/vignettes/manual/AddNewComponent.Rmd
+++ b/vignettes/manual/AddNewComponent.Rmd
@@ -16,7 +16,7 @@ Step two (within X.hpp):
 -----------
 Under `private` list the variables that are used in the component and their corresponding type. 
 E.g. 
-* `tseries<unitval> x` to create a [time series](TSeries.html).
+* `tseries<unitval> x` to create a [time series](https://jgcri.github.io/hector/articles/manual/TimeSeries.html).
 * `unitval x` to declare a [value with associated units](Unitvals.html).
 * `double x` 
 
@@ -25,7 +25,7 @@ Step three (within X.cpp):
 Make sure that you `#include X.hpp`.
 
 _In the constructor_  
-If the variable is a tseries, add all of the variables allowing for interpolation and their corresponding names
+If the variable is a `tseries`, add all of the variables allowing for interpolation and their corresponding names
 	
 	XComponent::XComponent() {
 	    X_emissions.allowInterp( true ); 
@@ -38,7 +38,8 @@ Inform the core what data the component can provide (*registerCapability*) and w
 	core->registerDependency( D_LIFETIME_X, getComponentName() );
 
 _In X::setData_  
-Set the data that are used as inputs within this component, typically coming from the ini file.  [[For examples of tseries vs. unitvals in setData|AddTSeries]].
+Set the data that are used as inputs within this component, typically coming from the INI file.  
+[[For examples of `tseries` vs. `unitvals` in [Time Series](https://jgcri.github.io/hector/articles/manual/TimeSeries.html)]].
 
 _In X::prepareToRun_
 TODO: describe
