--- a/vignettes/manual/AddNewComponent.Rmd
+++ b/vignettes/manual/AddNewComponent.Rmd
@@ -14,7 +14,7 @@ It is best to copy and modify the corresponding files from an already constructe
 
 Step two (within X.hpp):  
 -----------
-Under `private` list the variables that are used in the component and their corresponding type. 
+Under `private` list the variables that are used in the component and their corresponding type. Because of Hector's ability to [reset](https://jgcri.github.io/hector/reference/reset.html), every state variable generally needs an associated time series history variable.
 E.g. 
 * `tseries<unitval> x` to create a [time series](https://jgcri.github.io/hector/articles/manual/TimeSeries.html).
 * `unitval x` to declare a [value with associated units](Unitvals.html).
@@ -45,7 +45,7 @@ _In X::prepareToRun_
 TODO: describe
 
 _In X::run_
-The run method contains the equations and code used in this component.  Here is where you would want a log statement, written out to the component's log.
+The run method contains the equations and code used in this component. Here is where you would want a log statement, written out to the component's log.
 
 `H_LOG( logger, Logger::DEBUG ) << "Year " << runToDate << " X concentration = " << X.get( runToDate ) << std::endl;`
 
