--- a/vignettes/manual/AddNewVariable.Rmd
+++ b/vignettes/manual/AddNewVariable.Rmd
@@ -2,43 +2,45 @@
 title: Adding a new variable
 ---
 
-Adding a new variable to a method
-using getData to obtain the information defined in the ini file
+Adding a new variable to a method using `getData` to obtain the information defined in the INI file.
 
-In hector.ini under the corresponding component add variable
-	Ex: SN = 42000;
+Method
+---------
+
+_In hector.ini_
+Under the corresponding component add variable
+	Ex: `SN = 42000;`
 
 
-In hpp file of component add variable as tseries/unitval/double/etc. 
+_In hpp file of component_ 
+Add variable as `tseries`, `unitval`, `double`, etc. and add its associated time series (when necessary; see above).
 
-In component_data.hpp define the variables that are being added
-	Ex: #define D_ATMOSPHERIC_SO2 "SN"
-	These names do *not* have to match internal component variables but 
-	the ini definition *has to* match what appears in quotes
+_In component_data.hpp_
+Define the variables that are being added
+	Ex: `#define D_ATMOSPHERIC_SO2 "SN"`
+	
+These names do *not* have to match internal component variables but the INI definition *has to* match what appears in quotes
 
-In the component file .cpp 
-	under init, need to register the Capability
-	core->registerCapability( D_ATMOSPHERIC_SO2, getComponentName() );
+_In the component file.cpp_
+Under init, need to register the Capability
+	`core->registerCapability( D_ATMOSPHERIC_SO2, getComponentName() );`
 
-In cpp file of component, under getData and setData, add the new variables in before the Error message 
-NOTE: see tseries documentation for more information on getData
+_In cpp file of component_
+Under `getData` and `setData`, add the new variables in before the Error message 
+
+NOTE: see [tseries](https://jgcri.github.io/hector/articles/manual/TimeSeries.html) documentation for more information on `getData`
 
 	(getData)
-	else if( varName == D_ATMOSPHERIC_SO2 ) {
-       
-	returnval = SN;
-        
-	(setData)
+	else if(varName == D_ATMOSPHERIC_SO2 ) {
+	  returnval = SN;
+	  (setData)
 	else if( varName ==  D_ATMOSPHERIC_SO2  ) {
-           
-	H_ASSERT( data.date == Core::undefinedIndex(), "date not allowed" );
-   
-        SN.set( lexical_cast<double>( value ), U_GG );
+	  H_ASSERT( data.date == Core::undefinedIndex(), "date not allowed");
+    SN.set( lexical_cast<double>( value ), U_GG );
         }
 
+_If this variable is called in another component._
+For example, if adding in a variable within the forcing component
+    Ex: `unitval SN = core->getData( D_ATMOSPHERIC_SO2, runToDate);`
 
-If this variable is called in another component.
-	For example if adding in a variable within the focing component
-        Ex: unitval SN = core->getData( D_ATMOSPHERIC_SO2, runToDate);
-
-If this variable is a unitval, the new unitval needs to appear in the unitval.hpp file.
+If this variable is a `unitval`, the relevant code file must include `unitval.hpp`.
