--- a/vignettes/manual/BuildHector.Rmd
+++ b/vignettes/manual/BuildHector.Rmd
@@ -63,7 +63,7 @@ Fortunately, Hector's only external dependency--Boost--is freely available under
 
 **Boost** is a free, peer-reviewed portable C++ source library, available at http://www.boost.org/.
 Hector primarily uses Boost "header-only" libraries, which do not need to be compiled independently and only need to be extracted and included with the Hector source.
-However, Hector currently _does_ depend on two Boost libraries--`system` and `filesystem`--that require compilation. 
+However, Hector currently _does_ depend on one Boost library, `filesystem`, that requires compilation. 
 
 ## Command Line (Linux & Mac OSX)
 
